--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,14 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Angular2</title>
+  <title>Nehas App</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <hey>Gotta wait a little while pal!...</hey>
+  
 </body>
 </html>
